use migrate-parsetree latest Ast for typer

--- a/ocaml/parsing/dune
+++ b/ocaml/parsing/dune
@@ -1,7 +1,16 @@
 (library
  (name typedppxlib_ocaml_parsing)
- (modules_without_implementation asttypes parsetree)
  (public_name typedppxlib.ocaml.parsing)
  (flags
-  (:standard -w -9 -open Typedppxlib_ocaml_utils))
- (libraries typedppxlib_ocaml_utils))
+  (:standard
+   -w
+   -9
+   -open
+   Typedppxlib_ocaml_utils
+   -open
+   Typedppxlib_ocaml_stdlib))
+ (libraries
+  ocaml-compiler-libs.common
+  ocaml-migrate-parsetree
+  typedppxlib_ocaml_utils
+  typedppxlib_ocaml_stdlib))
