--- a/ocaml/stdlib/dune
+++ b/ocaml/stdlib/dune
@@ -1,5 +1,6 @@
 (library
  (name typedppxlib_ocaml_stdlib)
  (public_name typedppxlib.ocaml.stdlib)
+ (libraries ocaml-migrate-parsetree)
  (preprocess
   (pps ppx_optcomp)))
