--- a/typedppxlib.opam
+++ b/typedppxlib.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 depends: [
   "dune" {>= "2.9"}
-  "ocaml" {>= "4.08.0" & < "4.13.0"}
+  "ocaml"
   "ppxlib"
   "ppx_optcomp"
   "odoc" {with-doc}
