add compatibility with ocaml 4.08 up to 4.12

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,10 @@
 (library
  (name typedppxlib)
  (public_name typedppxlib)
- (libraries ppxlib typedppxlib_ocaml_driver typedppxlib_ocaml_typing))
+ (libraries
+  ppxlib
+  typedppxlib_ocaml_driver
+  typedppxlib_ocaml_typing
+  ocaml-migrate-types)
+ (preprocess
+  (pps ppx_optcomp)))
