add support to OCaml 4.08 and above

--- a/ocaml/parsing/dune
+++ b/ocaml/parsing/dune
@@ -11,5 +11,6 @@
    Typedppxlib_ocaml_stdlib))
  (libraries
   ocaml-compiler-libs.common
+  ppxlib
   typedppxlib_ocaml_utils
   typedppxlib_ocaml_stdlib))
