--- a/src/dune
+++ b/src/dune
@@ -5,6 +5,7 @@
   ppxlib
   ppxlib.astlib
   typedppxlib_ocaml_driver
-  typedppxlib_ocaml_typing)
+  typedppxlib_ocaml_typing
+  ocaml-migrate-types)
  (preprocess
   (pps ppx_optcomp)))
